# Customer-Churn-Prediction-and-Sales-Dashboard

./: README.md
Customer-Churn-Prediction-and-Sales-Dashboard--main/: README.md  app.py  pyproject.toml  replit.md
Customer-Churn-Prediction-and-Sales-Dashboard--main/pages/: 1_Data_Upload.py  2_Churn_Prediction.py  3_Customer_Segmentation.py  4_Sales_Analysis.py  5_Sales_Forecasting.py
Customer-Churn-Prediction-and-Sales-Dashboard--main/utils/: data_processor.py  ml_models.py  visualizations.py
